--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,268 +9,108 @@
 }
 
 body {
+    overflow: hidden;
     height: 100vh;
-    overflow: hidden;
-}
-
-.form {
-    width: 30%;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    z-index: 400;
-    height: 100%;
-    right: -100%;
-    transition: all 0.4s ease;
-    font-family: "Poppins";
-}
-
-.form.active {
-    right: 0;
-}
-
-.form form {
-    display: flex;
-    flex-direction: column;
-}
-
-.form h3 {
-    margin-bottom: 15px;
-    color: #333;
-    text-decoration: underline;
-}
-
-.form label {
-    display: block;
-    margin-bottom: 5px;
-    color: #555;
-}
-
-.form select,
-.form input[type="text"] {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-#addDataSuggestion {
-    max-height: 55%;
-    overflow-y: auto;
-    background-color: #fff;
-    position: absolute;
-    top: 34%;
-    border-radius: 10px;
-    width: 90%;
-    z-index: 1000;
-    scrollbar-width: thin;
-}
-
-#addDataSuggestion div {
-    padding: 8px;
-    cursor: pointer;
-    border-bottom: 1px solid rgba(107, 107, 107, 0.278);
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
-
-#addDataSuggestion div img {
-    height: 70px;
-    width: 50px;
-    border-radius: 5px;
-}
-
-#addDataSuggestionLists div:hover {
-    background-color: #f0f0f0;
-}
-
-.form .slider-container {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.form .slider-container input[type="range"] {
-    flex: 1;
-    margin-right: 10px;
-}
-
-.form .slider-container span {
-    width: 40px;
-    text-align: center;
-}
-
-.form #poster-btn {
-    position: relative;
-    width: 50%;
-    height: 220px;
-    background-color: #e9ecef;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    cursor: pointer;
-    border-radius: 20px;
-    overflow: hidden;
-    font-size: 40px;
-    --ionicon-stroke-width: 60px;
-}
-
-.form #poster-btn img {
-    position: relative;
-    height: 100%;
-    width: 100%;
-}
-
-.form #poster-btn button {
-    position: absolute;
-    padding: 10px;
-    display: none;
-    cursor: pointer;
-    z-index: 40;
-}
-
-.form #poster-btn button:first-child {
-    left: 10px;
-}
-
-.form #poster-btn button:last-child {
-    right: 30px;
-}
-
-.form #poster-btn:hover button {
-    display: block;
-}
-
-.form input[type="submit"],
-.form #addDataCancel {
-    width: calc(100% / 3 - 3px);
-    padding: 10px;
-    margin-top: 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-}
-
-.form #addDataCancel {
-    background-color: #dc3545;
-}
-
-.form input[type="submit"]:hover,
-.form #addDataCancel:hover {
-    opacity: 0.9;
 }
 
 .container {
     height: 100vh;
-    background: url(../Images/background.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     position: relative;
-    scrollbar-width: none;
-}
-
-.container::before {
-    content: "";
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: linear-gradient(90deg, rgba(57, 56, 63, 0.6987946667924982) 56%, rgba(9, 9, 121, 0.6539767396216298) 74%, rgba(0, 212, 255, 0.3878702970445991) 100%);
+    overflow: hidden;
+    background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
 }
 
 .header {
-    backdrop-filter: blur(50px);
-    position: sticky;
-    top: 0;
+    height: 15%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-block: 20px;
-    padding-inline: 100px;
-    background-color: transparent;
+    padding-inline: 40px;
     color: #fff;
-    border-bottom: 2px solid rgb(255, 255, 255);
+    border-bottom: 1.5px solid #ccc;
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-    text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
-    z-index: 200;
     font-family: "Playwrite VN";
 }
 
-.header #addDataBtn {
-    width: 50px;
-    height: 50px;
-    font-size: 20px;
+.buttons {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.button {
+    background-color: #EA4C89;
+    height: 45px;
+    width: 45px;
     border-radius: 50%;
-    padding-block: 2px;
+    border-style: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    --ionicon-stroke-width: 60px;
-    color: #000;
-    border: none;
-    cursor: pointer;
-
-    &:hover {
-        border: 3px solid #000;
-    }
+    transition: all 0.3s ease;
 }
 
-.filter {
-    backdrop-filter: blur(50px);
-    position: sticky;
-    top: 0;
-    padding-block: 10px;
-    padding-inline: 40px;
-    border-bottom: 2px solid rgb(255, 255, 255);
-    display: flex;
-    gap: 10px;
+.button:hover {
+    background-color: #F082AC;
 }
 
-.filter select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background: transparent;
-    border-radius: 5px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    width: max-content;
-    padding-right: 30px;
+.button span {
+    height: 16px;
+    width: 4px;
+    border-radius: 20px;
     background-color: #fff;
-    outline: none;
-    cursor: pointer;
-    font-family: "Poppins";
-    font-weight: 500;
+}
+
+.button span:last-child {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(90deg);
 }
 
 #dataContainer {
-    height: 74%;
-    position: relative;
+    height: 85%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
-    padding-block: 20px;
+    padding-block: 35px;
     scroll-behavior: smooth;
     overflow: auto;
     scrollbar-width: none;
+}
+
+.welcomeBox {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+    padding-block-end: 20px;
+}
+
+.welcomeBox p {
+    font-family: 'Poppins';
+    text-align: center;
+    border-bottom: 1.5px solid #ccc;
+    padding: 20px;
+}
+
+.button1 {
+    border-radius: 8px;
+    padding-inline: 40px;
 }
 
 .square {
@@ -278,13 +118,17 @@ body {
     width: calc(100% / 6);
     overflow: hidden;
     position: relative;
-    background: transparent;
-    margin-block: 10px;
+    margin-block: 5px;
+    border-radius: 8px;
 }
 
 .square img {
     height: 100%;
     width: 100%;
+}
+
+.square:hover {
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .content {
@@ -315,7 +159,7 @@ body {
     margin-top: 10px;
 }
 
-.content .edit-btn,
+.content .dataEdit,
 .content .dataRemove {
     padding-block: 10px;
     padding-inline: 10px;
@@ -335,22 +179,312 @@ body {
     background-color: #dc3545;
 }
 
-.square:hover {
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-}
-
 .square:hover .content {
     bottom: 0;
 }
 
 
+
+
+.form {
+    width: 0;
+    overflow: hidden;
+    border-radius: 8px;
+    background-color: #fff;
+    position: absolute;
+    z-index: 1;
+    top: calc(15% - 1.5px);
+    right: 40px;
+    transition: all 0.3s ease;
+    font-family: "Poppins";
+    height: 0;
+    opacity: 0.5;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+
+.form.active {
+    height: 360px;
+    width: 23%;
+    opacity: 1;
+}
+
+#filterForm.active {
+    height: 420px;
+}
+
+.shake {
+    animation: shake 0.3s ease-in-out;
+}
+
+@keyframes shake {
+
+    0%,
+    100% {
+        transform: translateX(0);
+    }
+
+    25%,
+    75% {
+        transform: translateX(-10px);
+    }
+
+    50% {
+        transform: translateX(10px);
+    }
+}
+
+.form form {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    padding-block-start: 35px;
+}
+
+#filterForm form {
+    padding-block-start: 20px;
+}
+
+.form h3 {
+    margin-bottom: 15px;
+    color: #333;
+    text-decoration: underline;
+}
+
+.form label {
+    display: block;
+    margin-bottom: 5px;
+    color: #555;
+}
+
+.form select,
+.form input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    position: relative;
+}
+
+
+
+input:disabled {
+    cursor: not-allowed;
+}
+
+
+.form .slider-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.form .slider-container input[type="range"] {
+    flex: 1;
+    margin-right: 10px;
+}
+
+.form .slider-container span {
+    width: 40px;
+    text-align: center;
+}
+
+
+.form input[type="submit"],
+.form .cancel {
+    width: calc(100% / 3 - 3px);
+    padding: 10px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+}
+
+.form .cancel {
+    background-color: #dc3545;
+}
+
+.form input[type="submit"]:hover,
+.form .cancel:hover {
+    opacity: 0.9;
+}
+
+
+table,td,tr{
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    text-align: center;
+    padding: 2px;
+}
+
+.message {
+    padding-inline: 10px;
+    padding-block: 5px;
+    border-radius: 0px 0px 0px 5px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 5px;
+    width: max-content;
+    position: absolute;
+    top: 0;
+    visibility: hidden;
+    right: -100%;
+    transition: all 0.3s ease;
+}
+
+.message.active {
+    visibility: visible;
+    right: 0;
+}
+
+#addDataSuggestion {
+    max-height: 40%;
+    overflow: auto;
+    background-color: #fff;
+    position: absolute;
+    top: 59%;
+    border-radius: 0px 0px 8px 8px;
+    width: 84.5%;
+    left: 8%;
+    scrollbar-width: thin;
+    border: 1px solid #ccc;
+    z-index: 1;
+}
+
+#addDataSuggestion div {
+    padding: 8px;
+    cursor: pointer;
+    border-bottom: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+#addDataSuggestion div img {
+    height: 60px;
+    width: 45px;
+    border-radius: 4px;
+
+}
+
+#addDataSuggestion div:hover {
+    background-color: #ccc;
+}
+
 .highlight {
-    background-color: #444;
-    /* Green background */
+    background-color: #ccc;
     color: white;
-    /* White text */
+    font-weight: 500;
     padding: 5px;
-    /* Padding for better visibility */
-    border-radius: 5px;
-    /* Rounded corners */
+}
+
+
+
+/* Extra small devices (phones, 320px and up) */
+@media (min-width: 320px) {
+    .header{
+        padding-inline: 15px;
+    }
+    .header h3{
+        font-size: 14px;
+    }
+    .button{
+        height: 40px;
+        width: 40px;
+    }
+    #dataContainer{
+        padding-block: 20px;
+        gap: 12px;
+    }
+    .square{
+        width: 45%;
+        height: 225px;
+    }
+    .form{
+        right: 15px;
+    }
+    .form.active{
+        width: 82%;
+    }
+    .content{
+        font-size: 11.5px;
+    }
+    .content .buttons{
+        gap: 5px;
+    }
+    .content .buttons button{
+        padding-block: 8px;
+    }
+}
+
+@media (min-width: 375px){
+    
+    .square{
+        height: 250px;
+    }
+}
+
+
+@media (min-width: 425px){
+    .header{
+        padding-inline: 25px;
+    }
+    .square{
+        height: 275px;
+    }
+}
+
+/* Small devices (phones, 480px and up) */
+@media (min-width: 480px) {
+    .form {
+        width: 90%;
+        right: 5%;
+        top: 10px;
+        height: auto;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .form {
+        width: 70%;
+        right: 15%;
+        top: 20px;
+        height: auto;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    .form {
+        width: 50%;
+        right: 25%;
+        top: 30px;
+        height: auto;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .form {
+        width: 40%;
+        right: 30%;
+        top: 40px;
+        height: auto;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
 }
