--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    overflow: hidden;
+    overflow: auto;
     height: 100vh;
 }
 
@@ -266,10 +266,8 @@ body {
     padding: 8px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
     position: relative;
 }
-
 
 
 input:disabled {
@@ -320,7 +318,7 @@ table,td,tr{
     border: 1px solid #ccc;
     border-collapse: collapse;
     text-align: center;
-    padding: 2px;
+    padding: 3px;
 }
 
 .message {
@@ -351,8 +349,8 @@ table,td,tr{
     position: absolute;
     top: 59%;
     border-radius: 0px 0px 8px 8px;
-    width: 84.5%;
-    left: 8%;
+    width: 85%;
+    left: 7.5%;
     scrollbar-width: thin;
     border: 1px solid #ccc;
     z-index: 1;
@@ -414,7 +412,7 @@ table,td,tr{
         width: 82%;
     }
     .content{
-        font-size: 11.5px;
+        font-size: 10.5px;
     }
     .content .buttons{
         gap: 5px;
@@ -422,10 +420,19 @@ table,td,tr{
     .content .buttons button{
         padding-block: 8px;
     }
+    .form .buttons{
+        gap: 5px;
+    }
 }
 
 @media (min-width: 375px){
     
+    .content{
+        font-size: 13px;
+    }
+    .form.active{
+        width: 71%;
+    }
     .square{
         height: 250px;
     }
@@ -439,41 +446,43 @@ table,td,tr{
     .square{
         height: 275px;
     }
-}
-
-/* Small devices (phones, 480px and up) */
-@media (min-width: 480px) {
-    .form {
-        width: 90%;
-        right: 5%;
-        top: 10px;
-        height: auto;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    .form{
+        right: 25px;
+    }
+    .form.active{
+        width: 65%;
+    }
+    .content{
+        font-size: 13px;
     }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-    .form {
-        width: 70%;
-        right: 15%;
-        top: 20px;
-        height: auto;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
+
+    
+    .square{
+        width: 30%;
+        height: 60%;
+    }
+    .form.active{
+        width: 34%;
+    }
+    #addDataSuggestion{
+        width: 87%;
+        left: 6.5%;
+    }
+    table,tr,td{
+        padding: 5px;
+        font-size: 14px;
     }
 }
 
 /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-    .form {
-        width: 50%;
-        right: 25%;
-        top: 30px;
-        height: auto;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+@media (min-width: 1024px) {
+    .square{
+        height: 55%;
     }
 }
 
