--- a/CSS/style.css
+++ b/CSS/style.css
@@ -423,6 +423,10 @@ table,td,tr{
     .form .buttons{
         gap: 5px;
     }
+
+    .welcomeBox {
+        width: 90%;
+    }
 }
 
 @media (min-width: 375px){
