--- a/CSS/style.css
+++ b/CSS/style.css
@@ -500,12 +500,11 @@ table,td,tr{
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-    .form {
-        width: 40%;
-        right: 30%;
-        top: 40px;
-        height: auto;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    .square{
+        width: calc(100% / 6);
+        height: 275px;
+    }
+    .form.active{
+        width: 25%;
     }
 }
