--- a/CSS/style.css
+++ b/CSS/style.css
@@ -494,7 +494,11 @@ table,td,tr{
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 1024px) {
     .square{
-        height: 55%;
+        width: calc(100% / 6);
+        height: 275px;
+    }
+    .form.active{
+        width: 25%;
     }
 }
 
