--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,514 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Playwrite+VN:wght@100..400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    user-select: none;
 }
 
-body {
-    overflow: auto;
+body{
     height: 100vh;
+    overflow: hidden;
 }
 
-.container {
+.main-container{
     height: 100vh;
-    position: relative;
-    overflow: hidden;
-    background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
-}
-
-.header {
-    height: 15%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-block: 20px;
-    padding-inline: 40px;
-    color: #fff;
-    border-bottom: 1.5px solid #ccc;
-    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-    font-family: "Playwrite VN";
-}
-
-.buttons {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.button {
-    background-color: #EA4C89;
-    height: 45px;
-    width: 45px;
-    border-radius: 50%;
-    border-style: none;
-    color: #fff;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 500;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s ease;
-}
-
-.button:hover {
-    background-color: #F082AC;
-}
-
-.button span {
-    height: 16px;
-    width: 4px;
-    border-radius: 20px;
-    background-color: #fff;
-}
-
-.button span:last-child {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(90deg);
-}
-
-#dataContainer {
-    height: 85%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 30px;
-    padding-block: 35px;
-    scroll-behavior: smooth;
+    background-color: red;
     overflow: auto;
-    scrollbar-width: none;
 }
-
-.welcomeBox {
-    width: 35%;
-    display: flex;
-    flex-direction: column;
+a{
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    border-radius: 10px;
-    background-color: #fff;
-    padding-block-end: 20px;
 }
 
-.welcomeBox p {
-    font-family: 'Poppins';
-    text-align: center;
-    border-bottom: 1.5px solid #ccc;
-    padding: 20px;
-}
-
-.button1 {
-    border-radius: 8px;
-    padding-inline: 40px;
-}
-
-.square {
-    height: 275px;
-    width: calc(100% / 6);
-    overflow: hidden;
-    position: relative;
-    margin-block: 5px;
-    border-radius: 8px;
-}
-
-.square img {
-    height: 100%;
-    width: 100%;
-}
-
-.square:hover {
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-}
-
-.content {
-    height: 100%;
-    width: 100%;
-    color: #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    font-family: Poppins;
-    font-weight: 500;
-    gap: 10px;
-    background-color: #fff;
-    position: absolute;
-    bottom: -100%;
-    transition: all 0.3s ease;
-    padding-inline: 10px;
-}
-
-.content p {
-    text-align: center;
-}
-
-.content .buttons {
-    display: flex;
-    gap: 15px;
-    margin-top: 10px;
-}
-
-.content .dataEdit,
-.content .dataRemove {
-    padding-block: 10px;
-    padding-inline: 10px;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 5px;
-    font-weight: 500;
-    font-size: 14px;
-
-    &:hover {
-        opacity: 0.9;
-    }
-}
-
-.content .dataRemove {
-    background-color: #dc3545;
-}
-
-.square:hover .content {
-    bottom: 0;
-}
-
-
-
-
-.form {
-    width: 0;
-    overflow: hidden;
-    border-radius: 8px;
-    background-color: #fff;
-    position: absolute;
-    z-index: 1;
-    top: calc(15% - 1.5px);
-    right: 40px;
-    transition: all 0.3s ease;
-    font-family: "Poppins";
-    height: 0;
-    opacity: 0.5;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-
-.form.active {
-    height: 360px;
-    width: 23%;
-    opacity: 1;
-}
-
-#filterForm.active {
-    height: 420px;
-}
-
-.shake {
-    animation: shake 0.3s ease-in-out;
-}
-
-@keyframes shake {
-
-    0%,
-    100% {
-        transform: translateX(0);
-    }
-
-    25%,
-    75% {
-        transform: translateX(-10px);
-    }
-
-    50% {
-        transform: translateX(10px);
-    }
-}
-
-.form form {
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    padding-block-start: 35px;
-}
-
-#filterForm form {
-    padding-block-start: 20px;
-}
-
-.form h3 {
-    margin-bottom: 15px;
-    color: #333;
-    text-decoration: underline;
-}
-
-.form label {
-    display: block;
-    margin-bottom: 5px;
-    color: #555;
-}
-
-.form select,
-.form input[type="text"] {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    position: relative;
-}
-
-
-input:disabled {
-    cursor: not-allowed;
-}
-
-
-.form .slider-container {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.form .slider-container input[type="range"] {
-    flex: 1;
-    margin-right: 10px;
-}
-
-.form .slider-container span {
-    width: 40px;
-    text-align: center;
-}
-
-
-.form input[type="submit"],
-.form .cancel {
-    width: calc(100% / 3 - 3px);
-    padding: 10px;
-    margin-top: 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-}
-
-.form .cancel {
-    background-color: #dc3545;
-}
-
-.form input[type="submit"]:hover,
-.form .cancel:hover {
-    opacity: 0.9;
-}
-
-
-table,td,tr{
-    border: 1px solid #ccc;
-    border-collapse: collapse;
-    text-align: center;
-    padding: 3px;
-}
-
-.message {
-    padding-inline: 10px;
-    padding-block: 5px;
-    border-radius: 0px 0px 0px 5px;
-    color: #fff;
-    font-size: 14px;
-    font-weight: 500;
-    margin-bottom: 5px;
-    width: max-content;
-    position: absolute;
-    top: 0;
-    visibility: hidden;
-    right: -100%;
-    transition: all 0.3s ease;
-}
-
-.message.active {
-    visibility: visible;
-    right: 0;
-}
-
-#addDataSuggestion {
-    max-height: 40%;
-    overflow: auto;
-    background-color: #fff;
-    position: absolute;
-    top: 59%;
-    border-radius: 0px 0px 8px 8px;
-    width: 85%;
-    left: 7.5%;
-    scrollbar-width: thin;
-    border: 1px solid #ccc;
-    z-index: 1;
-}
-
-#addDataSuggestion div {
-    padding: 8px;
-    cursor: pointer;
-    border-bottom: 1px solid #ccc;
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
-
-#addDataSuggestion div img {
-    height: 60px;
-    width: 45px;
-    border-radius: 4px;
-
-}
-
-#addDataSuggestion div:hover {
-    background-color: #ccc;
-}
-
-.highlight {
-    background-color: #ccc;
-    color: white;
-    font-weight: 500;
-    padding: 5px;
-}
-
-
-
-/* Extra small devices (phones, 320px and up) */
-@media (min-width: 0px) and (max-width: 374px)  {
-    .header{
-        padding-inline: 15px;
-    }
-    .header h3{
-        font-size: 14px;
-    }
-    .button{
-        height: 40px;
-        width: 40px;
-    }
-    #dataContainer{
-        padding-block: 20px;
-        gap: 12px;
-    }
-    .square{
-        width: 45%;
-        height: 225px;
-    }
-    .form{
-        right: 15px;
-    }
-    .form.active{
-        width: 82%;
-    }
-    .content{
-        font-size: 10.5px;
-    }
-    .content .buttons{
-        gap: 5px;
-    }
-    .content .buttons button{
-        padding-block: 8px;
-    }
-    .form .buttons{
-        gap: 5px;
-    }
-
-    .welcomeBox {
-        width: 80%;
-    }
-}
-
-@media (min-width: 375px){
-    
-    .content{
-        font-size: 13px;
-    }
-    .form.active{
-        width: 71%;
-    }
-    .square{
-        height: 250px;
-    }
-    
-    .welcomeBox {
-        width: 80%;
-    }
-}
-
-
-@media (min-width: 425px){
-    .header{
-        padding-inline: 25px;
-    }
-    .square{
-        height: 275px;
-    }
-    .form{
-        right: 25px;
-    }
-    .form.active{
-        width: 65%;
-    }
-    .content{
-        font-size: 13px;
-    }
-    
-    .welcomeBox {
-        width: 80%;
-    }
-}
-
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-    
-
-    
-    .square{
-        width: 30%;
-        height: 60%;
-    }
-    .form.active{
-        width: 34%;
-    }
-    #addDataSuggestion{
-        width: 87%;
-        left: 6.5%;
-    }
-    table,tr,td{
-        padding: 5px;
-        font-size: 14px;
-    }
-}
-
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 1024px) {
-    .square{
-        width: calc(100% / 6);
-        height: 275px;
-    }
-    .form.active{
-        width: 25%;
-    }
-}
-
-/* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-    .square{
-        width: calc(100% / 6);
-        height: 275px;
-    }
-    .form.active{
-        width: 25%;
-    }
-}
