--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,6 +18,12 @@ body{
     background-color: beige;
 }
 
+input{
+    width: 100%;
+}
+
+#submit
+
 .add-btn{
     position: absolute;
     top: -15px;
