--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+input:focus{
+    outline: none;
+    box-shadow: none;
+    border-color: transparent;
+}
+
 body{
     height: 100vh;
     overflow: hidden;
@@ -18,7 +24,13 @@ body{
     background-color: beige;
 }
 
+.search-nav{
+    background-color: red;
+}
+
 input{
+    outline: none;
+    box-shadow: none;
     position: relative;
     width: 100%;
 }
@@ -38,14 +50,22 @@ input{
     padding-top: 90px;
 }
 .box{
-    height: 250px;
+    height: 220px;
     width: 100%;
     border: 2px solid;
     margin-bottom: 30px;
+    position: relative;
 }
 
 .grid{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.box-title{
+    position: absolute;
+    padding: 0;
+    border: 2px solid;
+    bottom: 0;
 }
