--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,71 +1,108 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-input:focus{
-    outline: none;
-    box-shadow: none;
-    border-color: transparent;
-}
-
-body{
+body {
     height: 100vh;
     overflow: hidden;
 }
 
-.main-container{
+.main-container {
     height: 100vh;
+    position: relative;
     overflow: auto;
 }
 
-.nav{
-    background-color: beige;
-}
-
-.search-nav{
-    background-color: red;
-}
-
-input{
-    outline: none;
-    box-shadow: none;
-    position: relative;
+.nav {
+    height: 80px;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    box-shadow: 2px 2px 15px black;
 }
 
-#submit-btn{
-    position: absolute;
-    top: 26%;
-    right: 10%;
-}
-
-.add-btn{
-    position: absolute;
-    top: -15px;
-    right: -15px;
-}
-.search-result-container{
-    padding-top: 90px;
-}
-.box{
-    height: 220px;
-    width: 100%;
-    border: 2px solid;
-    margin-bottom: 30px;
-    position: relative;
-}
-
-.grid{
+.nav-list {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 0.5s ease;
 }
 
-.box-title{
-    position: absolute;
-    padding: 0;
+.nav-list ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+    list-style-type: none;
     border: 2px solid;
-    bottom: 0;
+    padding: 0;
+}
+
+.button-group {
+    display: flex;
+    gap: 20px;
+}
+
+.toggle {
+    font-size: 20px;
+    display: none;
+    transition: all 0.3s ease;
+}
+
+.search-container{
+    height: 100vh;
+    position: absolute;
+    border: 2px solid ;
+    overflow: auto;
+    top: -100vh;
+    background-color: rgba(0, 0, 0, 0.886);
+    z-index: 1;
+    transition: all 0.3s ease;
+}
+
+.search-container.active{
+    top: 0;
+}
+
+.search-bar{
+    backdrop-filter: blur(10);
+}
+
+@media (max-width: 480px) {
+    .nav-list {
+        position: absolute;
+        top: 80px;
+        left: 0;
+        width: 100%;
+        justify-content: start;
+        background-color: gray;
+        height: 0;
+        overflow: hidden;
+    }
+
+    .nav-list.active {
+        height: 256px;
+    }
+
+    .nav-list ul {
+        flex-direction: column;
+        width: 100%;
+        padding: 10px;
+    }
+
+    .nav-list ul li {
+        width: 100%;
+    }
+
+    .toggle {
+        display: block;
+    }
+
+    .toggle.active {
+        transform: rotate(-180deg);
+    }
 }
