--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,104 +9,132 @@ body {
     overflow: hidden;
 }
 
-.main-container {
+.container {
     height: 100vh;
-    position: relative;
     overflow: auto;
-    scroll-behavior: smooth;
+    scrollbar-width:none;
+    position: relative;
+    background-color: #000;
 }
 
-.nav {
-    height: 80px;
+.banner {
+    height: 100vh;
+    background: url(../Images/bg.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.navbar{
+height: 80px;
+width: 100%;
+padding: 30px 30px;
+position: fixed;
+top: 0;
+z-index: 2;
+background: linear-gradient(180deg, rgba(0, 0, 0, 0.8000) 0.000%, rgba(0, 0, 0, 0.7889) 8.333%, rgba(0, 0, 0, 0.7556) 16.67%, rgba(0, 0, 0, 0.7000) 25.00%, rgba(0, 0, 0, 0.6222) 33.33%, rgba(0, 0, 0, 0.5222) 41.67%, rgba(0, 0, 0, 0.4000) 50.00%, rgba(0, 0, 0, 0.2778) 58.33%, rgba(0, 0, 0, 0.1778) 66.67%, rgba(0, 0, 0, 0.1000) 75.00%, rgba(0, 0, 0, 0.04444) 83.33%, rgba(0, 0, 0, 0.01111) 91.67%, rgba(0, 0, 0, 0.000) 100.0%);
+}
+
+.navbar h1{
+    color: rgb(229, 9, 20);
+}
+
+
+.banner-cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-}
-
-.nav h1{
-    cursor: pointer;
-}
-
-.nav-list {
-    display: flex;
-    align-items: center;
     justify-content: center;
-    transition: all 0.5s ease;
+    background-image: linear-gradient(360deg, rgba(0, 0, 0, 0.9000) 0.000%, rgba(0, 0, 0, 0.8965) 8.500%, rgba(0, 0, 0, 0.8861) 17.00%, rgba(0, 0, 0, 0.8688) 25.50%, rgba(0, 0, 0, 0.8444) 34.00%, rgba(0, 0, 0, 0.8132) 42.50%, rgba(0, 0, 0, 0.7750) 51.00%, rgba(0, 0, 0, 0.7368) 59.50%, rgba(0, 0, 0, 0.7056) 68.00%, rgba(0, 0, 0, 0.6813) 76.50%, rgba(0, 0, 0, 0.6639) 85.00%, rgba(0, 0, 0, 0.6535) 93.50%, rgba(0, 0, 0, 0.6500) 102.0%);
 }
 
-.nav-list ul {
+.banner-cover h1{
+    width: 50%;
+    text-align: center;
+    color: #fff;
+    font-family: sans-serif;
+    line-height: 1.5;
+    font-size: 2.5em;
+}
+
+.box{
+
+    position: relative;
+    height: 150px;
+    overflow: hidden;
+}
+
+.trending-section{
+    position: absolute;
+    height: 100%;
+    width: 180%;
+    top: 0;
+    left: -40%;
+    border: 4px solid rgb(229, 9, 20);
+    border-top-left-radius: 50% 100%;
+    border-top-right-radius: 50% 100%;
+    border-bottom: none;
+    background: radial-gradient(50% 500% at 50% -420%, rgba(64, 97, 231, 0.4) 80%, rgba(0, 0, 0, 0.1) 100%), black;
+}
+
+.section{
+    background-color: #000;
+    padding-inline: 50px;
+    color: #fff;
+    padding-bottom: 50px;
+}
+
+
+.slider{
+    height: 250px;
+    margin-top: 20px;
+    background-color: #000;
+    border-radius: 8px;
     display: flex;
+    overflow: auto;
     align-items: center;
     gap: 30px;
-    list-style-type: none;
-    border: 2px solid;
-    padding: 0;
+    scrollbar-width: none;
+    padding: 20px;
+    margin-bottom: 50px;
 }
 
-.button-group {
-    display: flex;
-    gap: 20px;
+.section-cont:last-child{
+    padding-bottom: 10px;
 }
 
-.toggle {
-    font-size: 20px;
-    display: none;
+.card{
+    height: 100%;
+    min-width: 175px;
+    position: relative;
+    border-radius: 10px;
     transition: all 0.3s ease;
+
 }
 
-.search-container{
-    height: 100vh;
+.card:hover{
+    transform: scale(1.05);
+}
+
+.card img{
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+}
+.card span{
+    color:#000;
+    text-shadow:
+        -1px -1px 0 #fff,  /* white shadow at the top left */
+         1px -1px 0 #fff,  /* white shadow at the top right */
+        -1px  1px 0 #fff,  /* white shadow at the bottom left */
+         1px  1px 0 #fff; 
+         font-size: 4em;
+         font-weight:bolder;
+         font-family: sans-serif;
     position: absolute;
-    border: 2px solid ;
-    overflow: auto;
-    top: -100vh;
-    background-color: rgba(0, 0, 0, 0.802);
-    z-index: 1;
-    transition: all 0.3s ease;
-}
-
-.search-container.active{
-    top: 0;
-}
-
-.search-bar{
-    z-index: 1000;
-    background-color: #000000a1;
-    backdrop-filter: blur(20px);
-}
-
-@media (max-width: 480px) {
-    .nav-list {
-        position: absolute;
-        top: 80px;
-        left: 0;
-        width: 100%;
-        justify-content: start;
-        background-color: rgba(128, 128, 128, 0.61);
-        height: 0;
-        overflow: hidden;
-    }
-
-    .nav-list.active {
-        height: 356px;
-    }
-
-    .nav-list ul {
-        flex-direction: column;
-        width: 100%;
-        padding: 5px;
-    }
-
-    .nav-list ul li {
-        width: 100%;
-    }
-
-    .toggle {
-        display: block;
-    }
-
-    .toggle.active {
-        transform: rotate(-180deg);
-    }
+    bottom: 10px;
+    left: -9%;
 }
