--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,7 +27,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 1;
+    z-index: 2;
 }
 
 #navbarContainer a {
@@ -98,7 +98,7 @@ body {
 }
 
 #bannerContainer {
-    height: 100vh;
+    height: 110vh;
     position: relative;
     background-size: cover;
     background-position: center;
@@ -123,7 +123,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
+    gap: 60px;
     color: #fff;
 }
 
@@ -152,32 +152,51 @@ body {
 }
 
 #curveContainer {
-    box-sizing: border-box;
-    overflow-x: hidden;
+    height: 4rem;
     position: relative;
-    height: 6.25rem;
     z-index: 1;
 }
 
 #curve {
-    position: absolute;
     height: 100%;
-    top: 0;
+    width: 100%;
     border-top-left-radius: 50% 100%;
     border-top-right-radius: 50% 100%;
-    border-bottom: none;
+    position: absolute;
+    top: 0;
+    left: 0%;
     background: radial-gradient(50% 500% at 50% -420%, rgba(64, 97, 231, 0.4) 80%, rgba(0, 0, 0, 0.1) 100%), black;
 }
 
-#curve::before {
+#curve:before {
     content: '';
     position: absolute;
     top: 0;
-    right: 0;
     bottom: 0;
     left: 0;
-    z-index: -1;
-    margin-top: -.25rem;
+    right: 0;
+    margin-top: -0.15rem;
     border-radius: inherit;
     background: linear-gradient(to right, rgba(33, 13, 22, 1) 16%, rgba(184, 40, 105, 1), rgba(229, 9, 20, 1), rgba(184, 40, 105, 1), rgba(33, 13, 22, 1) 84%);
+    z-index: -1;
+}
+
+#sectionContainer {
+    padding: 60px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    color: #fff;
+    background-color: #000;
+}
+
+#sectionContainer h2 {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.sectionSlider {
+    height: 250px;
+    width: 100%;
+    background-color: #fff;
 }
