--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,6 +28,11 @@ body {
     align-items: center;
     justify-content: space-between;
     z-index: 2;
+    transition: all 0.3s ease;
+}
+
+#navbarContainer.active {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 #navbarContainer a {
@@ -76,7 +81,7 @@ body {
 #navbarMenuContainer ul li {
     width: 100%;
     border-radius: 0px;
-    padding: 6px 16px;
+    padding: 0px;
 
     &:hover {
         background-color: rgb(229, 9, 20);
@@ -84,6 +89,8 @@ body {
 }
 
 #navbarMenuContainer ul li a {
+    display: block;
+    padding: 6px 16px;
     font-weight: 600;
     color: #000;
     font-size: 14px;
@@ -198,5 +205,79 @@ body {
 .sectionSlider {
     height: 250px;
     width: 100%;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 40px;
+    overflow: auto;
+    scrollbar-width: none;
+}
+
+.sectionCard {
+    height: 100%;
+    min-width: 190px;
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+}
+
+.sectionCardType{
+    position: absolute;
+    top: 6px;
+    left: -100px;
+    padding: 2px 8px;
+    border-radius: 0 4px 4px 0;
+    font-size: 14px;
+    font-weight: 500;
+    background-color: rgb(229, 9, 20);
+    transition: all 0.2s ease;
+}
+
+.sectionCard:hover .sectionCardType {
+    left: 0;
+}
+
+.sectionCardButtonContainer {
+    position: absolute;
+    top: 6px;
+    right: -100px;
+    transition: all 0.2s ease;
+}
+
+.sectionCard:hover .sectionCardButtonContainer {
+    right: 6px;
+}
+
+.sectionCardButton {
+    height: 30px;
+    width: 30px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.sectionCardButton:hover {
+    opacity: 0.9;
+}
+
+.addToLibraryButton {
+    color: rgba(229, 9, 20);
     background-color: #fff;
+}
+
+.addToFavouriteButton {
+    color: rgba(229, 9, 20);
+    background-color: #fff;
+}
+
+.removeFromLibraryButton {
+    color: #fff;
+    background-color: rgba(229, 9, 20);
+}
+
+.removeFromFavouriteButton {
+    color: #fff;
+    background-color: rgba(229, 9, 20);
 }
