--- a/CSS/style.css
+++ b/CSS/style.css
@@ -209,6 +209,7 @@ body {
     gap: 20px;
     margin-bottom: 40px;
     overflow: auto;
+    scroll-behavior: smooth;
     scrollbar-width: none;
 }
 
