--- a/CSS/style.css
+++ b/CSS/style.css
@@ -157,11 +157,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    transition: all 0.3s ease;
+    transition: all 0.5s ease;
 }
 
 #navbarContainer.active {
-    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(3px);
 }
 
 #navbarContainer a {
