--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,17 @@
-.search-container{
+.search-container {
   display: none;
+}
+.base{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  height: 60%;
+  width: auto;
+}
+
+.title{
+  position: relative;
+  bottom: 0;
+  z-index: 3;
 }
